# libFluxion

./: .gitignore  CMakeLists.txt  README.md
include/shared/: AnalyzedDataContent.h  DataValues.h  Encodings.h  Fluxion.h  FluxionAttribute.h  FluxionException.h  FluxionNode.h
src/: DataValues.cpp  Fluxion.cpp  FluxionAttribute.cpp  FluxionNode.cpp  main.cpp
